Squashing bugs

--- a/css/index-stylesheet.css
+++ b/css/index-stylesheet.css
@@ -152,7 +152,7 @@ body{
     font-size: 20px;
     color: #ddd;
     margin-top: 10px;
-    min-width:600px;
+    min-width:51%;
 }
 .flagged {
     color: #e55;
